--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/main/webapp/modrianTst"]
-    path = src/main/webapp/modrianTst
+[submodule "mondrianconfig"]
+    path = src/main/webapp/modrian
     url = ../drawio_mondrian_config.git
