--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mondrianconfig"]
-    path = src/main/webapp/modrian
+    path = src/main/webapp/mondrian
     url = ../drawio_mondrian_config.git
