--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mondrianconfig"]
     path = src/main/webapp/mondrian
     url = ../drawio_mondrian_config.git
+[submodule "src/main/webapp/mondrian2"]
+	path = src/main/webapp/mondrian2
+	url = https://github.kyndryl.net/Mondrian/drawio_mondrian_config.git
