local pages deploy

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 
   "scripts": {
     "deployPublic": "gh-pages -d src/main/webapp -r https://github.com/merijn-weiss/drawio.git",
-    "deployKyndryl": "gh-pages -d src/main/webapp -r https://github.kyndryl.net/Mondrian/drawio.git"
+    "deployKyndryl": "gh-pages -d src/main/webapp -r https://github.kyndryl.net/Mondrian/drawio.git",
+    "page-deploy": "gh-pages -d src/main/webapp"
   }
 }
