--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -25,6 +25,8 @@ jobs:
         git submodule update --init --recursive
         git commit -m "Reset submodules" || echo "No changes to commit"
         git push
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/setup-node@v3
       with:
         node-version: 16
