--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -19,6 +19,7 @@ jobs:
         token: ${{ secrets.MONDRIAN_DRAWIO_TOKEN }}
     - name: Reset submodules recursively
       run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@${GITHUB_SERVER}/${GITHUB_REPOSITORY}.git
         git config user.email "actions@github.com"
         git config user.name "GitHub Actions - reset submodules"
         git submodule foreach --recursive git reset --hard
