--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
         git remote set-url origin https://git:${GITHUB_TOKEN}@${GITHUB_SERVER}/${GITHUB_REPOSITORY}.git
         git config user.email "actions@github.com"
         git config user.name "GitHub Actions - reset submodules"
-        git git submodule deinit -f .  
+        git submodule deinit -f .  
         git submodule update --init --recursive
         git commit -m "Reset submodules" || echo "No changes to commit"
         git push
