--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -15,8 +15,20 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: dev_mondrian
-        submodules: 'recursive'
+        #submodules: 'recursive'
         token: ${{ secrets.MONDRIAN_DRAWIO_TOKEN }}
+    - name: Reset submodules recursively
+      run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@${GITHUB_SERVER}/${GITHUB_REPOSITORY}.git
+        git config user.email "actions@github.com"
+        git config user.name "GitHub Actions - reset submodules"
+        git submodule foreach --recursive git reset --hard
+        git submodule update --init --recursive --remote
+        git add .
+        git commit -m "Reset submodules" || echo "No changes to commit"
+        git push
+      env:
+          GITHUB_TOKEN: ${{ secrets.MONDRIAN_DRAWIO_TOKEN }}
     - uses: actions/setup-node@v3
       with:
         node-version: 16
